1-kubevirt/cloud-init_debian.yaml
apiVersion: v1
kind: Service
metadata:
  name: debian9-ssh
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: ssh
    port: 22
    protocol: TCP
    targetPort: 22
  selector:
    image: debian9
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: debian9-http
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    image: debian9
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: debian9-front
spec:
  rules:
    - host: nginx.34.70.102.106.xip.io
      http:
        paths:
        - path: /
          backend:
            serviceName: debian9-http
            servicePort: 80
